# ma_prompt

./: README.md  calibrator_planning.py  main.py  pyproject.toml  requirements.txt  supervisor_planning.py
agent_system/: __init__.py  agent_system.py  base_agent.py  config.py  llm.py  message_bus.py
agents/: calibrator.py  data_calibration.py  data_developer.py  developer.py  metadata_steward.py  supervisor.py
notebooks/: de_normal.ipynb
tests/: test_supervisor_agent.py
